Comit NI reported to DB - button

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -539,6 +539,12 @@
                                         <label style="padding: 0.5em 0px;"> כל המתנדבים </label>
                                     </div>
                                 </div>
+                                <div class="row">
+                                    <div class="col-sm-6"><input type="button" template_id="commit_to_ni_db" value="אל תדווח שוב על מתנדבים אלו" /> </div>
+                                    <div class="col-sm-6">
+                                        <label style="padding: 0.5em 0px;"> (עדכון מסד הנתונים) </label>
+                                    </div>
+                                </div>
 
                             </div>
                         </div>
