viewCandidate module change the function candidatesButton some text changes

--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -852,7 +852,7 @@
         
         const candidatesButton = (btn) => { 
             let ridePatNum = btn.name;
-            GENERAL.RIDEPAT.setRidePatNum4_viewCandidate(JSON.stringify(ridePatNum));
+            GENERAL.RIDEPAT.setRidePatNum4_viewCandidate(ridePatNum);
             location.href = "viewCandidates.html";
         }
 
