--- a/Road to Recovery/pages/viewCandidates.html
+++ b/Road to Recovery/pages/viewCandidates.html
@@ -116,12 +116,12 @@
                                 <ol class="breadcrumb pull-right">
 
                                     <li class="active">
-                                        ניהול מועמדים לנסיעה
+                                        ניהול מועמדים להסעה
 
                                     </li>
                                 </ol>
                                 <h4 class="page-title">
-                                    ניהול מועמדים לנסיעה&nbsp&nbsp&nbsp<i data-toggle="tooltip" title="My Rides تنسيق السفريات الخاصة بي">
+                                    ניהול מועמדים להסעה&nbsp&nbsp&nbsp<i data-toggle="tooltip" title="My Rides تنسيق السفريات الخاصة بي">
                                         <img src="../../Media/הסעות להיום.png" height="25" width="25" />
                                     </i>
                                 </h4>
@@ -148,7 +148,7 @@
                                         <div class="panel-heading" id="col1">
                                             <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
                                                 <a href="#collapse1" data-parent="#accordion" data-toggle="collapse" class="dropdown active open">
-                                                    מועמדים לנסיעה
+                                                    מועמדים להסעה
                                                     <span id="RideCandidates_ph"></span>
                                                 </a>
                                             </h4>
